# ca_customer_churn_analysis

./: README.md  pyproject.toml  requirements.txt
notebooks/: 1.eda.ipynb  2.modelagem.ipynb  3.clusterizacao.ipynb  4.explicabilidade.ipynb
src/: prepare.py  utils.py
