[tool.poetry]
name = "ca_customer_churn_analysis"
version = "0.1.0"
description = ""
authors = ["jessica <jessicasousa.pc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
missingno = "^0.5.2"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
tqdm = "^4.66.2"
nbformat = "^5.10.3"
seaborn = "^0.13.2"
pandas-gbq = "^0.22.0"
scikit-learn = "^1.4.1.post1"
loguru = "^0.7.2"
imbalanced-learn = "^0.12.0"
optuna = "^3.6.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
mlxtend = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
